--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+/* จัดการ padding + margin รวมในการคำนวณด้วย  */
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Browser ปกติจะมี margin มาให้ เซ็ต=0 */
+ิbody {
+  margin: 0;
+  background: #e9ebee;
+  color: #1d2129;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Navbar {
+  color: #fbf2e9;
+  font-size: 40px;
+  font-weight: bold;
+  background: #946c59;
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Input,
+.Post {
+  border-radius: 5px;
+  font-size: 20px;
+  border: 1px solid rgba(254, 244, 234, 255);
+  width: 576px;
+  margin: 20px auto;
+  background-color: rgba(254, 244, 234, 255);
 }
 
-.App-link {
-  color: #61dafb;
+.Input_header {
+  background-color: #be9986;
+  border-bottom: 1px solid #be9986;
+  border-radius: 2px 2px 0 0;
+  margin: 0;
+  padding: 15px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Input_field {
+  width: 100%;
+  height: 100px;
+  padding: 10px;
+  font-size: 20px;
+  background-color: #f4dec7;
+  border: none;
+}
+
+.input_field: focus {
+  outline: none;
+}
+
+.Post {
+  padding: 15px;
+}
+
+.Post_img {
+  width: 100%;
+  margin-top: 15px;
+}
+
+.Post_delete {
+  border: none;
+  background: none;
+  padding: 0;
+  float: right;
+  cursor: pointer;
+  font-size: 20px;
 }
